--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <title>This needs to be an auto generated title</title>
 </head>
-<body>
-<div id="0"></div>
+<body id="0">
 </body>
 </html>
