--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="js/runtime.js"></script>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/theme.css"/>
     <title>This needs to be an auto generated title</title>
 </head>
 <body id="0">
